--- a/hikehub/src/Components/Story/Story.module.css
+++ b/hikehub/src/Components/Story/Story.module.css
@@ -5,37 +5,33 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+
     /* padding: 4em; */
     /* gap: 2em; */
     /* border: 2px solid black; */
 }
 
-/* .img1 , .img3 {
-    margin-top: 3em;
-    overflow: hidden;
-    object-fit: contain;
-} */
 
 .pics {
     --webkit-transition: all 350ms ease;
     transition: all 350ms ease;
     cursor: pointer;
-    margin-bottom: 12px;
+    /* margin-bottom: 12px; */
     /* height: auto; */
     width: 100%;
     height: 100%;
 
 }
 
-.pics>img {
+/* .pics>img {
     object-fit: cover;
-}
+} */
 
-.pics:hover {
+/* .pics:hover {
     filter: opacity(0.8);
-}
+} */
 
-.model,
+/* .model,
 .modelClose {
     width: 100%;
     height: 100%;
@@ -52,9 +48,9 @@
     overflow: hidden;
     z-index: 10;
     transition: opacity 0.4s ease, visibility .4s ease, transform .5s ease-in-out;
-}
+} */
 
-.modelOpen {
+/* .modelOpen {
     visibility: visible;
     opacity: 1;
     transform: scale(1);
@@ -67,16 +63,16 @@
     width: 2em;
     height: 2em;
     cursor: pointer;
-}
+} */
 
-.showIMg {
+/* .showIMg {
     width: auto;
     max-width: 100%;
     height: auto;
     display: block;
     padding: 20px;
     margin: 0 auto;
-}
+} */
 
 @media (max-width:991px) {
     .gallery {
@@ -99,10 +95,10 @@
     }
 }
 
-.story {
+/* .story {
     flex-direction: row;
 
-}
+} */
 
 @keyframes fadeIn {
     from {
@@ -116,7 +112,8 @@
 
 .story,
 .flexPage {
-    display: flex;
+    display: flex !important;
+    flex-direction: row;
     width: 100%;
     /* margin: auto; */
     height: 100%;
@@ -125,9 +122,11 @@
     color: black;
     animation: fadeIn 0.5s ease-in-out;
     gap: 1em;
-    /* position: relative; */
-    align-items: stretch;
-    /* background-color: darkblue; */
+    align-items: center;
+    justify-content: space-between;
+    box-sizing: border-box;
+    /* border:2px solid red */
+
 
 }
 
@@ -137,30 +136,30 @@
 }
 
 .storySection {
-    height: 90%;
-    /* border: 10px solid rgb(253, 5, 5) ; */
+    /* height: 100% !important; */
+    /* min-height: 70vh; */
+    height: 100%;
+    width: 49%;
+    /* border: 3px solid blue; */
 }
 
 .storyImage {
-    width: 100%;
     height: 100%;
-    /* object-fit: cover; */
-    /* border: 1px solid black ; */
-
+    width: 100%;
+    object-fit: cover;
 }
 
 .textSection {
     width: 50%;
     display: flex;
     flex-direction: column;
-    gap: 2%;
+    gap: 2em;
     padding: 2em;
 
 }
 
 .storyTitle {
     font-size: 4em;
-
     text-wrap: wrap;
 }
 
@@ -206,13 +205,42 @@
     align-items: center;
     padding: 2%;
     font-size: 1.3em;
-    /* background-color: aqua; */
+    min-height: 12rem;
 }
 
-@media (max-width:1001px) {
+@media (max-width:1700px) {
+    .storyTitle {
+        font-size: 3.7em;
+        text-wrap: wrap;
+    }
+    
+    .date {
+        font-size: 2.1em;
+        font-style: italic;
+        opacity: 0.9;
+    }
+    
+    .storyDescription {
+        font-size: 1.3em;
+        line-height: 2;
+        height: 35%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    
+    }
+    
+    .storyTestimonial {
+        font-size: 1.2em;
+        min-height: 12rem;
+    }
+
+}
+
+@media (max-width:1281px) {
     .story {
         flex-direction: column;
         height: fit-content;
+        /* wid */
     }
 
     .textSection {
@@ -220,7 +248,7 @@
     }
 
     .storySection {
-        width: 94%;
+        width: 90%;
     }
 
     .storyTestimonial {
@@ -296,6 +324,20 @@
     /* border: 1px solid red; */
 }
 
+
+
+
+@media (max-width:670px) {
+
+    .storySection {
+        width: 100%;
+    }
+
+    .storyTestimonial {
+        /* margin-bottom: 1rem; */
+        width: 95%;
+    }
+}
 /***********************************************/
 /* .story{
    flex-direction: row;
