--- a/hikehub/src/Pages/Events/Events.module.css
+++ b/hikehub/src/Pages/Events/Events.module.css
@@ -12,7 +12,7 @@
     gap: 1em;
     /* border: 1px solid black; */
     /* position: relative; */
-    min-height: 60vh;
+    min-height: 70vh;
 
 }
 
@@ -85,6 +85,25 @@
 }
 
 
+
+.notFound{
+    /* border: 2px solid red; */
+    width: 50%;
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap:2em;
+    color: var(--lighter-green);
+    font-size: 2.7em;
+}
+
+.notFound>img{
+    width: 70%;
+    height: 70%;
+    object-fit: cover;
+}
 @media (max-width:1300px) {
     .filterContainer {
         width: 75%;
