--- a/hikehub/src/Pages/Locations/Add.css
+++ b/hikehub/src/Pages/Locations/Add.css
@@ -1,3 +1,7 @@
 .css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input{
-    color: rgba(0, 0, 0, 0.785) !important;
+    color: black !important;
+}
+
+.css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input{
+    color: black !important;
 }
