--- a/hikehub/src/Pages/Sign/profile.css
+++ b/hikehub/src/Pages/Sign/profile.css
@@ -1,6 +1,6 @@
-.css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input {
+/* .css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input {
     color: white  !important;
 }
 .css-t4mn18-MuiFormControl-root-MuiTextField-root .MuiInputLabel-root{
     color: white !important;
-}
+} */
