--- a/hikehub/src/Components/Details/Details.module.css
+++ b/hikehub/src/Components/Details/Details.module.css
@@ -1,110 +1,306 @@
-.detailsHolder{
-    width: 95%;
-    /* border: 1px solid red; */
-    display: flex;
-    height:auto;
-    gap:5em;
-    margin: 0 auto;
-
-}
-
-.details{
-  width: 60%;
+.detailsHolder {
+  width: 95%;
   /* border: 1px solid red; */
   display: flex;
-  flex-direction: column;
-  gap:1.5em;
-  position: relative;
-  /* justify-content: space-between; */
+  height: auto;
+  gap: 5em;
+  margin: 0 auto;
+
 }
-.detailsUls{
-  /* border: 1px solid red; */
+
+.cost{
+  font-weight: 600;
+  font-size: 1.3em;
+}
+.details {
+  width: 60%;
+  /* border: 2px solid black; */
+  display: flex;
+  flex-direction: column;
+  gap: 1.5em;
+  position: relative;
+  /* height: 100%; */
+  /* justify-content: s
+  pace-between; */
+}
+
+.detailsUls {
+  /* border: 1px solid pink; */
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   font-size: 1.4em;
+  height: 8%;
+  gap: 1em;
 }
 
-.detailsUls>li{
+.detailsUls>li {
   font-weight: 520;
   cursor: pointer;
+  /* border: 2px solid black; */
+  /* min-width:7em; */
+  /* min-width: %; */
+  width: auto;
+  align-items: center;
 }
 
-.active{
+.active {
   color: var(--dark-green);
   border-bottom: 2px solid var(--dark-green);
 }
-.inactive{
+
+.inactive {
   color: var(--dark-green);
-opacity: 0.6;
+  opacity: 0.6;
 }
 
-.liValue{
+.liValue {
   /* border: 1px solid red; */
   font-size: 1.3em;
-  line-height: 2;
-  padding-top: 1em;
+  line-height: 1.8;
+  /* padding-top: 1em; */
+  height: 65%;
+  overflow: hidden;
 
 }
-.BookDiv{
+
+.BookDiv {
   /* border: 1px solid red; */
   justify-self: flex-end;
 
 }
-.detailsImg{
+
+.detailsImg {
   max-height: 30em;
   width: 55%;
 }
-.img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: var(--border-radius);
+
+.img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: var(--border-radius);
 }
 
-.dotsUl{
-padding: auto;
-}
-.valueLists{
-  list-style-type: disc; /* Use 'circle' for filled circles */
-margin-left: 30px;
+.dotsUl {
+  padding: auto;
 }
 
-.bookSection{
+.valueLists {
+  list-style-type: disc;
+  /* Use 'circle' for filled circles */
+  margin-left: 30px;
+}
+
+.bookSection {
   position: absolute;
   bottom: 2%;
-  /* border: 1px solid red; */
+  /* border: 2px solid black; */
   width: 30%;
   height: 14%;
 }
-.bookSection>button{
+
+.bookSection>button {
   border-radius: var(--border-radius);
   width: 100%;
-background-color: rgb(19, 57, 13);
-/* border: 2px solid black; */
-border: none;
+  background-color: rgb(19, 57, 13);
+  /* border: 2px solid black; */
+  border: none;
   height: 100%;
   font-size: 20px;
   cursor: pointer;
   color: rgb(255, 255, 255);
 
 }
-@media screen and (max-width:1000px) {
-  .detailsHolder{
+
+@media(max-width:1000px) {
+  .detailsHolder {
     flex-direction: column;
-  }
-  .liValue{
-    width: 100%;
-    height: fit-content;
-  }
-  .details{
-    width: 100%;
-  }
-  .bookSection{
-    margin-top: 10rem;
-  }
-  .img{
-    width: 100%;
+    height: 30em;
+    min-height: 30em;
+
   }
 
+  .details {
+    height: 100%;
+    width: 100%;
+
+  }
+
+  .liValue {
+    width: 100%;
+    height: fit-content;
+    font-size: 4rem;
+  }
+
+  .bookSection {
+    margin-top: 0rem;
+    width: 40%;
+
+  }
+
+  .detailsImg {
+    display: none;
+  }
+
+
+
+  .liValue {
+    font-size: 1.5em;
+    line-height: 1.5;
+
+  }
+
+  .detailsUls {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 8%;
+  }
+
+  .detailsUls>li {
+    font-weight: 520;
+    font-size: 1.2em;
+    padding-bottom: 10px;
+
+    cursor: pointer;
+  }
+
+  .bookSection {}
+}
+
+
+@media screen and (max-width:1400px) {
+
+  .bookSection {
+    width: 45%;
+  }
+
+  .detailsHolder {
+
+    gap: 3em;
+
+  }
+}
+
+
+@media screen and (max-width:1120px) {
+
+  .bookSection {
+    /* width: 45%; */
+  }
+
+
+
+  .liValue {
+    font-size: 1.2em;
+    line-height: 1.5;
+
+
+  }
+
+  .detailsUls {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: 1.2em;
+    height: 8%;
+  }
+
+  .detailsUls>li {
+    font-weight: 420;
+    cursor: pointer;
+  }
+}
+
+
+
+
+@media (max-width:750px) {
+  .detailsUls {
+    gap: 1em;
+    overflow-x: scroll;
+
+  }
+
+  .pts {
+    min-width: 7em;
+  }
+}
+
+
+@media (max-width:530px) {
+
+  .detailsHolder {
+    height: fit-content;
+    height: 32em;
+    gap: 0;
+  }
+
+  .details {
+    height: 100%;
+    margin: 0;
+
+  }
+
+  .bookSection {
+    /* height: 10% ; */
+  }
+}
+
+@media (max-width:490px) {
+
+  .detailsHolder {
+    height: 35em;
+    gap: 2em;
+  }
+
+  .detailsUls {
+    font-size: 1.1em;
+    height: auto;
+  
+  }
+  .bookSection{
+    width: 60%;
+    height: 11%;
+  }
+
+}
+@media (max-width:435px) {
+
+  .liValue {
+    /* border: 1px solid red; */
+    font-size: 1.1em;
+  }
+
+ 
+}
+
+@media (max-width:350px) {
+
+
+  .detailsHolder {
+    height: 39em;
+    /* gap: 3em; */
+  }
+
+  .bookSection{
+    width: 80%;
+    height: 11%;
+  }
+ 
+}
+
+@media (max-width:300px) {
+
+
+  .detailsHolder {
+    height: 42em;
+    /* gap: 3em; */
+  }
+  .bookSection{
+    width: 85%;
+    height: 11%;
+  }
+ 
 }
