--- a/hikehub/src/Components/EventCart/EventCart.module.css
+++ b/hikehub/src/Components/EventCart/EventCart.module.css
@@ -15,7 +15,7 @@
     position: relative;
 }
 
-.opacity{
+.opacity {
     position: absolute;
     background-color: rgba(0, 0, 0, 0.4);
     width: 100%;
@@ -24,30 +24,32 @@
     z-index: 1;
 
 }
-.eventCart>section{
+
+.eventCart>section {
     /* border: 2px solid red;
      */
 }
+
 .eventImg {
     /* border: 2px solid black; */
     width: 100%;
     height: 55%;
     border-radius: var(--border-radius) var(--border-radius) 0 0;
-position: relative;
+    /* position: relative; */
 }
 
-.eventImg>img{
+.eventImg>img {
     object-fit: cover;
     border-radius: var(--border-radius) var(--border-radius) 0 0;
     width: 100%;
     height: 100%;
-
 }
 
-.datee{
+.datee {
     opacity: 0.7;
     text-align: left;
 }
+
 .eventCart>h3 {
     /* border: 1px solid red; */
     padding: 0em 1.5em;
@@ -110,7 +112,7 @@ position: relative;
 .btn {
     /*  */
     height: 100%;
-    width: 30%;
+    width: 34%;
     cursor: pointer;
     /* border: 1px solid red; */
     border-radius: var(--border-radius);
@@ -138,23 +140,24 @@ position: relative;
     overflow: hidden;
     text-overflow: ellipsis;
     height: 100%;
-    white-space: nowrap; 
-            /* Prevent text from wrapping */
+    white-space: nowrap;
+    /* Prevent text from wrapping */
 
     /* max-height: 70%; */
 }
 
-@media (max-width:1745px){
-    .eventCart{
+@media (max-width:1745px) {
+    .eventCart {
         width: 28em;
     }
 }
 
-@media (max-width:1638px){
-    .eventCart{
+@media (max-width:1638px) {
+    .eventCart {
         width: 25em;
     }
-    .btn{
+
+    .btn {
         /* border: 2px solid red; */
         width: 45%;
     }
@@ -163,45 +166,44 @@ position: relative;
 
 
 
-@media (max-width:1477px){
-    .eventCart{
+@media (max-width:1477px) {
+    .eventCart {
         width: 30em;
     }
 }
 
-@media (max-width:1140px){
-    .eventCart{
+@media (max-width:1140px) {
+    .eventCart {
         width: 28em;
     }
 }
 
-@media (max-width:570px){
-    .eventCart{
+@media (max-width:570px) {
+    .eventCart {
         width: 95%;
     }
 }
 
-@media (max-width:460px){
- .details{
-    /* border: 1px solid red; */
-    padding: 0em 0em;
+@media (max-width:460px) {
+    .details {
+        /* border: 1px solid red; */
+        padding: 0em 0em;
 
- }
- .detail{
-    /* border: 1px solid red; */
-    padding: 0em;
+    }
 
- }
+    .detail {
+        /* border: 1px solid red; */
+        padding: 0em;
 
- .eventIcons {
+    }
 
-    height: 2em;
-    width: 2em;
+    .eventIcons {
+
+        height: 2em;
+        width: 2em;
+    }
+
+    .btn {
+        width: 60%;
+    }
 }
-
-.btn{
-    width: 60%;
-}
-}
-
-
