--- a/hikehub/src/Pages/EventDetail/Event.module.css
+++ b/hikehub/src/Pages/EventDetail/Event.module.css
@@ -1,52 +1,56 @@
-.eventHolder{
+.eventHolder {
     /* border: 1px solid red; */
-    width: 85%;  
+    width: 85%;
     margin: 5em auto;
     display: flex;
     flex-direction: column;
-    gap:4.2em;
-    
+    gap: 4.2em;
+
 }
 
-.additionalData{
+.additionalData {
     /* border: 1px solid red; */
-    width: 90%;
+    width: 95%;
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
 
+
 }
 
-.additionalData>section{
-    width: 47%;
+.additionalData>section {
+    width: 49%;
     height: auto;
     /* border: 1px solid green;  */
 }
-.eventImages{
+
+.eventImages {
     /* border: 1px solid red; */
     width: 100%;
     height: auto;
     display: flex;
     align-items: center;
-    gap:2em;
-    overflow: hidden;
+    gap: 2em;
+    overflow: scroll;
 }
 
-.eventImg{
+.eventImg {
     height: 30em;
     width: 30em;
     /* border: 2px solid red; */
     object-fit: cover;
     border-radius: var(--border-radius);
 }
-.captures{
+
+.captures {
     display: flex;
     flex-direction: column;
-    gap:2em
+    gap: 2em;
+    /* border: 1px solid black; */
 }
 
 
-.loadingDiv{
+.loadingDiv {
     width: 100%;
     height: 100vh;
     display: flex;
@@ -54,6 +58,7 @@
     align-items: center;
 
 }
+
 .loader {
     width: fit-content;
     font-weight: bold;
@@ -66,14 +71,103 @@
     height: 50%; */
     /* position: absolute; */
 
-  
-  }
-  .loader:before {
-    content:"Loading..."
-    
-  }
-  @keyframes l2 {to{background-size: 100% 3px}}
 
-  @media screen and (max-width:1200px) {
+}
+
+.loader:before {
+    content: "Loading..."
+
+}
+
+@keyframes l2 {
+    to {
+        background-size: 100% 3px
+    }
+}
+
+@media screen and (max-width:590px) {
+    .eventImg {
+        width: 100vw;
+        /* border: 2px solid red; */
+    }
+}
+
+
+@media (max-width:1250px) {
+
+    .eventHolder {
+        width: 93%;
+    }
+
+    .additionalData {
+        width: 100%;
+    }
+    .eventImages {
+        /* border: 1px solid red; */
+        width: 100%;
+        height: auto;
+        display: flex;
+        align-items: center;
+        gap: 2em;
+        overflow: scroll;
+    }
     
-  }
+    .eventImg {
+        height: 28em;
+        width: 28em;
+        /* border: 2px solid red; */
+        object-fit: cover;
+        border-radius: var(--border-radius);
+    }
+
+}
+
+
+@media (max-width:1250px) {
+
+
+    
+    .eventImg {
+        height: 26em;
+        width: 26em;
+        /* border: 2px solid red; */
+        object-fit: cover;
+        border-radius: var(--border-radius);
+    }
+
+}
+
+@media (max-width:970px) {
+
+    .additionalData {
+        flex-direction: column;
+        gap: 2em;
+
+    }
+
+    .additionalData>section {
+        width: 80%;
+        margin: 0 auto;
+
+    }
+
+}
+
+@media (max-width:640px) {
+
+    .additionalData>section {
+        width: 90%;
+        margin: 0 auto;
+
+    }
+
+    .eventImg {
+        height: 25em;
+        width: 25em;
+        min-width: 100%;
+        /* border: 2px solid red; */
+        object-fit: cover;
+        border-radius: var(--border-radius);
+    }
+
+}
