--- a/hikehub/src/Pages/Stories/Stories.module.css
+++ b/hikehub/src/Pages/Stories/Stories.module.css
@@ -1,6 +1,7 @@
 .storyPage{
     position: relative;
-    height: calc(100ch - 7em); /* Assuming font size is 16px */
+    /* height: calc(100ch - 7em); */
+    height: 90%;
     /* margin-top: 5.6em; */
     /* margin-bottom: 1em; */
     /* border: 5px solid black; */
@@ -8,6 +9,11 @@
     /* justify-content: center; */
     /* align-items: center; */
     margin: 5.6em 3em 1em 3em;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    /* height: 100%; */
+    /* min-height: 80vh; */
 
 }
 
@@ -18,6 +24,7 @@
     position: fixed;
     z-index: 1;
 }
+
 .opacity{
     width:100%;
     height: 100%;
@@ -26,6 +33,7 @@
     z-index: 2;
     background-color: rgba(7, 8, 9, 0.8);
 }
+
 .storiesHolder{
     width: 80%;
     height: 100%;
@@ -97,10 +105,10 @@
     width: 97%;
     height: 95%;
     margin: 0 auto;
-    border: 3px solid rgb(0, 8, 255);
+    /* border: 3px solid rgb(0, 8, 255); */
     min-height: 83vh;
-    display: flex;
-    flex-direction: column;
+    /* display: flex; */
+    /* flex-direction: column; */
     
 
 }
