--- a/hikehub/src/Components/EventCart/EventCart.module.css
+++ b/hikehub/src/Components/EventCart/EventCart.module.css
@@ -1,8 +1,12 @@
 .eventCart {
     /*  */
     /* border: 1px solid red; */
-    height: 34em;
-    width: 30em;
+    height: 34rem;
+    width: 30rem;
+
+    /* height: 510px; 
+    width: 480px; */
+
     /* min-width: 30em; */
     border-radius: var(--border-radius);
     box-shadow: 1px 1px 2px 5px rgba(0, 0, 0, 0.05);
@@ -146,11 +150,11 @@
     /* max-height: 70%; */
 }
 
-@media (max-width:1745px) {
+/* @media (max-width:1745px) {
     .eventCart {
         width: 28em;
     }
-}
+} */
 
 @media (max-width:1638px) {
     .eventCart {
@@ -180,7 +184,7 @@
 
 @media (max-width:570px) {
     .eventCart {
-        width: 95%;
+        width: 100%;
     }
 }
 
